Added XGBoost for the prediction

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "49b8deb2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e43955ba",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
        "9                   2002       0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,8 +773,8 @@
    "source": [
     "# customer_data = pd.read_csv('../dane/credit_scoring_kaggle/train.csv', sep=',')\n",
     "# customer_data = pd.read_excel('../dane/credit_scoring_kaggle/train_cleaned.xlsx')\n",
-    "customer_data = pd.read_csv('../dane/Lending Club Loan Data/X.csv')\n",
-    "target = pd.read_csv('../dane/Lending Club Loan Data/target.csv')\n",
+    "customer_data = pd.read_csv('../data/Lending Club Loan Data/X.csv')\n",
+    "target = pd.read_csv('../data/Lending Club Loan Data/target.csv')\n",
     "customer_data['target'] = target['y']\n",
     "pd.options.display.max_columns = None\n",
     "customer_data.head(10)"
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b5b89228",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
        "(2139643, 46)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1069603f",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "cea617bb",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "5be2b6d0",
    "metadata": {},
    "outputs": [],
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "778b5ffe",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
        "(497725, 34)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f09d03ff",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1276,7 @@
        "4                    Nov                   2004       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c311e3a8",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1297,7 @@
        "(500, 40000)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ef72de9b",
    "metadata": {},
    "outputs": [],
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f925e1b2",
    "metadata": {},
    "outputs": [],
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "f92768e6",
    "metadata": {},
    "outputs": [
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "5c29cd87",
    "metadata": {},
    "outputs": [
@@ -1812,7 +1812,7 @@
        "var_coeff [%]                   0.38    259.88  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "3ecb690b",
    "metadata": {},
    "outputs": [],
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "c2f7e55a",
    "metadata": {},
    "outputs": [
@@ -2139,7 +2139,7 @@
        "4                36                  14            4       0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2150,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "8df66143",
    "metadata": {},
    "outputs": [
@@ -2552,7 +2552,7 @@
        "var_coeff [%]             25.31               45.82        66.85    259.88  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2567,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "45ded601",
    "metadata": {},
    "outputs": [
@@ -2670,7 +2670,7 @@
        "freq                282505      70437              332985              481189  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2682,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "117e0baa",
    "metadata": {},
    "outputs": [],
@@ -2693,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "d146a0fc",
    "metadata": {},
    "outputs": [],
@@ -2703,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "e9bf306d",
    "metadata": {},
    "outputs": [
@@ -2713,7 +2713,7 @@
        "(22, 9)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2724,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "cd8c5400",
    "metadata": {},
    "outputs": [],
@@ -2781,7 +2781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "1b2951ec",
    "metadata": {},
    "outputs": [
@@ -2791,7 +2791,7 @@
        "(8, 3)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2802,7 +2802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "32017610",
    "metadata": {},
    "outputs": [
@@ -2870,7 +2870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "5b3740ed",
    "metadata": {},
    "outputs": [
@@ -3006,7 +3006,7 @@
        "4                Cash               36           4  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3028,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "8d874266",
    "metadata": {},
    "outputs": [
@@ -3147,7 +3147,7 @@
        "freq              354954        89941  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3158,7 +3158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "4d5028ee",
    "metadata": {},
    "outputs": [
@@ -3369,7 +3369,7 @@
        "4                  5                  14       0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3381,7 +3381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "7e89cd06",
    "metadata": {},
    "outputs": [
@@ -3840,7 +3840,7 @@
        "kurtosis                     1.45  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3857,7 +3857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "d772c52d",
    "metadata": {},
    "outputs": [],
@@ -3894,7 +3894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "bade8fa9",
    "metadata": {},
    "outputs": [
@@ -3923,7 +3923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "2b19ec8d",
    "metadata": {},
    "outputs": [],
@@ -3966,7 +3966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "69bb8002",
    "metadata": {},
    "outputs": [
@@ -3976,7 +3976,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4018,7 +4018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "e18ed8f8",
    "metadata": {},
    "outputs": [
@@ -4070,7 +4070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "e82b5d6c",
    "metadata": {},
    "outputs": [
@@ -4106,7 +4106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "c3f5fd78",
    "metadata": {},
    "outputs": [
@@ -4404,7 +4404,7 @@
        "4               36                  14           4       0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4415,7 +4415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "a85ad10d",
    "metadata": {},
    "outputs": [
@@ -4534,7 +4534,7 @@
        "freq              354954        89941  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4545,7 +4545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "a1008f02",
    "metadata": {},
    "outputs": [
@@ -4649,7 +4649,7 @@
        "freq              354954        89941  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4669,7 +4669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "7bb0ade3",
    "metadata": {},
    "outputs": [
@@ -4713,7 +4713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "72d965ab",
    "metadata": {},
    "outputs": [
@@ -5924,7 +5924,7 @@
        "[497725 rows x 68 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5936,7 +5936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "471f1a85",
    "metadata": {},
    "outputs": [
@@ -5949,7 +5949,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5960,7 +5960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "26df6921",
    "metadata": {},
    "outputs": [
@@ -6578,7 +6578,7 @@
        "4           0.00           0.00           0.00           0.00           0.00  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6605,7 +6605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "9c1edd9c",
    "metadata": {},
    "outputs": [
@@ -6642,7 +6642,7 @@
        "        [9.86898273e-01, 1.31017268e-02]]))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6664,7 +6664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "87d68c33",
    "metadata": {},
    "outputs": [],
@@ -6672,8 +6672,6 @@
     "y_train_val_counts = y_train.value_counts()\n",
     "y_test_val_counts = y_test.value_counts()\n",
     "\n",
-    "cut_prob_threshold_train = y_train_val_counts.max() / y_train_val_counts.sum()\n",
-    "cut_prob_threshold_test = y_test_val_counts.max() / y_test_val_counts.sum()\n",
     "cut_prob = 0.5\n",
     "y_train_pred = np.where(y_train_probs[:, 0] > cut_prob, 0, 1)\n",
     "y_pred = np.where(y_probs[:, 0] > cut_prob, 0, 1)"
@@ -6689,7 +6687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "df4fc0a4",
    "metadata": {},
    "outputs": [
@@ -6798,7 +6796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "83f6b531",
    "metadata": {},
    "outputs": [],
